<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    tools:context=".view.MainActivity">

    <EditText
        android:id="@+id/Text1"
        android:layout_width="207dp"
        android:layout_height="98dp"
        android:autofillHints="name"
        android:background="?attr/actionMenuTextColor"
        android:backgroundTint="?attr/actionMenuTextColor"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_text1"
        android:inputType="text"
        android:rotationY="25"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textColorLink="@color/colorText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.254"/>

    <EditText
        android:id="@+id/Text2"
        android:layout_width="201dp"
        android:layout_height="100dp"
        android:autofillHints="name"
        android:background="?attr/actionMenuTextColor"
        android:backgroundTint="?attr/actionMenuTextColor"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_text2"
        android:inputType="text"
        android:rotationY="-25"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textColorLink="@color/colorText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.995"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.253"/>

    <TextView
        android:id="@+id/Resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:rotationX="25"
        android:text="@string/text_Resultado"
        android:textColor="@color/colorText"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826"
        android:contentDescription="@string/text_contentDescription"/>



    <Button
        android:id="@+id/BotonComparacion"
        android:layout_width="320dp"
        android:layout_height="95dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorBackground"
        android:contentDescription="@string/texto_boton_comparar"
        android:rotationX="21"
        android:text="@string/text_comparar"
        android:textColor="@color/colorText"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463"/>

</androidx.constraintlayout.widget.ConstraintLayout>